test/syntax/29-term-err.c
// ======================================================================

/* term -> term mulop unary_expression
         | unary_expression */

// ======================================================================

void main(void)
{
  int i;

  i = i * {};	// error: not unary_expression
}

// ======================================================================
